# blackjack

./: CMakeLists.txt  README.md
include/: bj_strat.h
lib/: error.h  moreio.h  morestrings.h  sort.h
output/: .Blackjack strategy chart.pdf.fi  Blackjack strategy chart.tex
src/: Makefile  bj_sims.c  bj_sims.h  bj_strat.c  bj_strat.h  hands.c  hands.h  main.c  print_chart.c  print_chart.h
src/util/: boolean.h  fourier.h  linal.h  moremath.h  plot.h  stp.h
util/: CMakeLists.txt
util/include/: error.h  linal.h  moremath.h  stp.h
util/src/: boolean.c  error.c  linal.c  moremath.c  stp.c
